# otel-arrow

collector/: otelarrowcol-build.yaml
rust/: FINAL_SUMMARY.md  REUSABLE_ARROW_COMPONENTS.md
rust/otap-dataflow/: ARROW_ENCODER_CLONING_ISSUES.md  ENCODER_ANALYSIS.md  GENEVA_EXPORTER_LOGGING.md  GENEVA_EXPORTER_OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_SUMMARY.md  README.md  README_GENEVA_TESTING.md  stress_test_geneva.py  stress_test_geneva_fixed.py  stress_test_geneva_simple.py  test_geneva_curl.sh  test_geneva_e2e.py  test_geneva_e2e.sh  test_geneva_simple.sh  test_geneva_simple_single.sh  test_geneva_with_code_attrs.sh  test_simple_curl.sh
rust/otap-dataflow/configs/: README.md  geneva-config-example.yaml  otlp-geneva-test.yaml  otlp-geneva.yaml
rust/otap-dataflow/crates/geneva-exporter/: Cargo.toml
rust/otap-dataflow/crates/geneva-exporter/src/: lib.rs
rust/otap-dataflow/crates/otap/: Cargo.toml
rust/otap-dataflow/crates/otap/src/: geneva_exporter.rs  lib.rs  otap_batch_processor.rs
rust/otap-dataflow/docs/: geneva-exporter.md
rust/otel-arrow-rust/docs/: geneva_exporter_plan.md
rust/otel-arrow-rust/src/: arrays.rs  otlp.rs
rust/otel-arrow-rust/src/otlp/: attributes.rs  common.rs  logs.rs
